fix(sonar): resolve SonarQube issues + ReDoS hotspots in the compression code
Issues:
- S1845 (BLOCKER ×3): rename compressor ALGORITHM → ALGORITHM_NAME to clear
  the case-only clash with the algorithm() method (Text/Code/Json).
- S1192 (×5) + S3776 (×1) on ApiAgentsController.update: extract KEY_COMPRESSION_*
  constants and an applyCompressionSettings(agent, body) helper.
- S3776 on CcrRetrieveTool.execute: extract a findOriginal(...) helper.
- S1172: drop the unused hash param from CompressionMetrics.recordCcrRetrieval.
- S6885: Math.max/min → Math.clamp. S7467: unnamed catch (_). S7158: StringBuilder.isEmpty().
- S1128 (×31): remove unused (BaseTest-inherited) JUnit assertion + CompressionResult/List imports.

Security hotspots (S5852, regex ReDoS):
- Harden the overlapping-quantifier cores with possessive quantifiers (behavior-
  preserving — disjoint char classes, no match-outcome change): TextCompressor
  `[ ]+$`→`[ ]++$`; CodeCompressor GO_HINT `\s+\w*\s*`→`\s++\w*+\s*+`, JS_HINT
  `import\s+.*`→`import\s++.*`.

Validated: play autotest BUILD SUCCESSFUL on port 9300.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>